--- a/generate_learning_target.ipynb
+++ b/generate_learning_target.ipynb
@@ -17,8 +17,18 @@
    "outputs": [],
    "source": [
     "# Read the CSV file into a DataFrame\n",
-    "df_1 = pd.read_csv('1.genome_learning_data/errors_fold1_base_e.csv')\n",
-    "df_2 = pd.read_csv('1.genome_learning_data/errors_fold2_base_e.csv')"
+    "df_1 = pd.read_csv('1_genome/1_training_data/errors_fold1_base10.csv')\n",
+    "df_2 = pd.read_csv('1_genome/1_training_data/errors_fold2_base10.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_3 = df_1.drop(columns='sequenceID') + df_2.drop(columns='sequenceID')\n",
+    "df_3 = pd.concat([df_1['sequenceID'], df_3], axis=1)"
    ]
   },
   {
@@ -29,6 +39,7 @@
    "source": [
     "df_target_1 = pd.DataFrame(columns=['sequenceID', 'small_end', 'big_end'])\n",
     "df_target_2 = pd.DataFrame(columns=['sequenceID', 'small_end', 'big_end'])\n",
+    "df_target_3 = pd.DataFrame(columns=['sequenceID', 'small_end', 'big_end'])\n",
     "\n",
     "# Create DataFrame\n",
     "rows = []\n",
@@ -50,17 +61,29 @@
     "                 'small_end': min_value_col_start, \n",
     "                 'big_end': min_value_col_end})\n",
     "\n",
-    "df_target_2 = pd.DataFrame(rows)"
+    "df_target_2 = pd.DataFrame(rows)\n",
+    "\n",
+    "# Create DataFrame\n",
+    "rows = []\n",
+    "for index, row in df_3.iterrows():\n",
+    "    min_value_col_start = row.iloc[1:].idxmin()\n",
+    "    min_value_col_end = row.iloc[1:][::-1].idxmin()\n",
+    "    rows.append({'sequenceID': row['sequenceID'], \n",
+    "                 'small_end': min_value_col_start, \n",
+    "                 'big_end': min_value_col_end})\n",
+    "\n",
+    "df_target_3 = pd.DataFrame(rows)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_target_1.to_csv('1.genome_learning_data/target_lambda_fold1_base_e.csv', index=False)\n",
-    "df_target_2.to_csv('1.genome_learning_data/target_lambda_fold2_base_e.csv', index=False)"
+    "df_target_1.to_csv('1_genome/1_training_data/target_lambda_fold1_base10.csv', index=False)\n",
+    "df_target_2.to_csv('1_genome/1_training_data/target_lambda_fold2_base10.csv', index=False)\n",
+    "df_target_3.to_csv('1_genome/1_training_data/target_lambda_bothfold_base10.csv', index=False)"
    ]
   }
  ],
