--- a/lambda_learning_linear.ipynb
+++ b/lambda_learning_linear.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x25441abb330>"
+       "<torch._C.Generator at 0x1a533dbb310>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,17 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# data\n",
-    "data = pd.read_csv('1.genome_learning_data/seq_features.csv')['count'].to_numpy()\n",
+    "data = pd.read_csv('1_genome/1_training_data/seq_features.csv')['count'].to_numpy()\n",
     "data = np.log(np.log(data)).reshape(-1,1)\n",
     "data = torch.FloatTensor(data)\n",
     "\n",
-    "target_df_1 = pd.read_csv('1.genome_learning_data/target_lambda_fold1_base_e.csv')\n",
-    "target_df_2 = pd.read_csv('1.genome_learning_data/target_lambda_fold2_base_e.csv')\n",
+    "target_df_1 = pd.read_csv('1_genome/1_training_data/target_lambda_fold1_base_e.csv')\n",
+    "target_df_2 = pd.read_csv('1_genome/1_training_data/target_lambda_fold2_base_e.csv')\n",
     "\n",
     "targets_low_1  = target_df_1.iloc[:, 1:2].to_numpy()\n",
     "targets_high_1 = target_df_1.iloc[:, 2:3].to_numpy()\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,24 +75,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch     0, Loss_1:   3.3376, Loss_1_test:   3.0308, Loss_2:   2.8394, Loss_2_test:   3.0363\n",
-      "Epoch  1000, Loss_1:   2.9092, Loss_1_test:   2.7616, Loss_2:   2.6496, Loss_2_test:   2.6954\n",
-      "Epoch  2000, Loss_1:   2.6138, Loss_1_test:   2.6095, Loss_2:   2.5712, Loss_2_test:   2.5055\n",
-      "Epoch  3000, Loss_1:   2.4283, Loss_1_test:   2.5496, Loss_2:   2.5524, Loss_2_test:   2.4204\n",
-      "Epoch  4000, Loss_1:   2.3185, Loss_1_test:   2.5586, Loss_2:   2.5501, Loss_2_test:   2.3899\n",
-      "Epoch  5000, Loss_1:   2.2533, Loss_1_test:   2.6162, Loss_2:   2.5500, Loss_2_test:   2.3858\n",
-      "Epoch  6000, Loss_1:   2.2210, Loss_1_test:   2.6971, Loss_2:   2.5498, Loss_2_test:   2.3859\n",
-      "Epoch  7000, Loss_1:   2.2198, Loss_1_test:   2.7202, Loss_2:   2.5495, Loss_2_test:   2.3858\n",
-      "Epoch  8000, Loss_1:   2.2196, Loss_1_test:   2.7316, Loss_2:   2.5490, Loss_2_test:   2.3863\n",
-      "Epoch  9000, Loss_1:   2.2196, Loss_1_test:   2.7347, Loss_2:   2.5485, Loss_2_test:   2.3878\n",
-      "Epoch 10000, Loss_1:   2.2196, Loss_1_test:   2.7349, Loss_2:   2.5478, Loss_2_test:   2.3888\n"
+      "Epoch     0, Loss_1:   5.0079, Loss_1_test:   4.7369, Loss_2:   4.5128, Loss_2_test:   4.6388\n",
+      "Epoch  1000, Loss_1:   4.4853, Loss_1_test:   4.4225, Loss_2:   4.2887, Loss_2_test:   4.2189\n",
+      "Epoch  2000, Loss_1:   4.1162, Loss_1_test:   4.2406, Loss_2:   4.1915, Loss_2_test:   3.9707\n",
+      "Epoch  3000, Loss_1:   3.8653, Loss_1_test:   4.1645, Loss_2:   4.1690, Loss_2_test:   3.8590\n",
+      "Epoch  4000, Loss_1:   3.7105, Loss_1_test:   4.1784, Loss_2:   4.1660, Loss_2_test:   3.8165\n",
+      "Epoch  5000, Loss_1:   3.6290, Loss_1_test:   4.2502, Loss_2:   4.1658, Loss_2_test:   3.8121\n",
+      "Epoch  6000, Loss_1:   3.5869, Loss_1_test:   4.3451, Loss_2:   4.1656, Loss_2_test:   3.8117\n",
+      "Epoch  7000, Loss_1:   3.5817, Loss_1_test:   4.4074, Loss_2:   4.1652, Loss_2_test:   3.8125\n",
+      "Epoch  8000, Loss_1:   3.5803, Loss_1_test:   4.4502, Loss_2:   4.1647, Loss_2_test:   3.8156\n",
+      "Epoch  9000, Loss_1:   3.5801, Loss_1_test:   4.4668, Loss_2:   4.1641, Loss_2_test:   3.8171\n",
+      "Epoch 10000, Loss_1:   3.5801, Loss_1_test:   4.4694, Loss_2:   4.1633, Loss_2_test:   3.8203\n"
      ]
     }
    ],
@@ -101,7 +101,7 @@
     "model1 = LinearModel(input_size = 1)\n",
     "model2 = LinearModel(input_size = 1)\n",
     "\n",
-    "squared_hinge_loss = SquaredHingeLoss(margin=1.5, low_lim=-8, high_lim=8)\n",
+    "squared_hinge_loss = SquaredHingeLoss(margin=2, low_lim=-8, high_lim=8)\n",
     "optimizer1 = optim.Adam(model1.parameters(), lr=0.0001)\n",
     "optimizer2 = optim.Adam(model2.parameters(), lr=0.0001)\n",
     "\n",
@@ -132,11 +132,11 @@
     "    # save models\n",
     "    if loss_1_test < min_loss_1_test:\n",
     "        min_loss_1_test = loss_1_test\n",
-    "        torch.save(model1.state_dict(), '1.genome_saved_models/model1_linear_best.pth')\n",
+    "        torch.save(model1.state_dict(), '1_genome/3_learned_models/model1_linear_best.pth')\n",
     "    \n",
     "    if loss_2_test < min_loss_2_test:\n",
     "        min_loss_2_test = loss_2_test\n",
-    "        torch.save(model2.state_dict(), '1.genome_saved_models/model2_linear_best.pth')\n",
+    "        torch.save(model2.state_dict(), '1_genome/3_learned_models/model2_linear_best.pth')\n",
     "    \n",
     "    # Print the loss every 100 epochs\n",
     "    if (epoch) % 1000 == 0:\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        ")"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,26 +174,26 @@
    "source": [
     "# Load model1\n",
     "model1 = LinearModel(input_size=1)\n",
-    "model1.load_state_dict(torch.load('1.genome_saved_models/model1_linear_best.pth'))\n",
+    "model1.load_state_dict(torch.load('1_genome/3_learned_models/model1_linear_best.pth'))\n",
     "model1.eval()  # Set the model to evaluation mode\n",
     "\n",
     "# Load model2\n",
     "model2 = LinearModel(input_size=1)\n",
-    "model2.load_state_dict(torch.load('1.genome_saved_models/model2_linear_best.pth'))\n",
+    "model2.load_state_dict(torch.load('1_genome/3_learned_models/model2_linear_best.pth'))\n",
     "model2.eval()  # Set the model to evaluation mode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parameter: fc1.weight, Value: tensor([[-0.1333]])\n",
-      "Parameter: fc1.bias, Value: tensor([0.3075])\n"
+      "Parameter: fc1.weight, Value: tensor([[-0.1335]])\n",
+      "Parameter: fc1.bias, Value: tensor([0.3076])\n"
      ]
     }
    ],
@@ -204,15 +204,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parameter: fc1.weight, Value: tensor([[-0.2770]])\n",
-      "Parameter: fc1.bias, Value: tensor([0.5791])\n"
+      "Parameter: fc1.weight, Value: tensor([[-0.2640]])\n",
+      "Parameter: fc1.bias, Value: tensor([0.5617])\n"
      ]
     }
    ],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,12 +234,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "seqs   = gen_data_dict('sequence_label_data/genome/signals.gz')\n",
-    "labels = gen_data_dict('sequence_label_data/genome/labels.gz')\n",
+    "seqs   = gen_data_dict('1_genome/0_sequences_labels/signals.gz')\n",
+    "labels = gen_data_dict('1_genome/0_sequences_labels/labels.gz')\n",
     "\n",
     "header = ['sequenceID', 'fold_1_total_labels', 'fold_2_total_labels', 'fold_1_fp_errs', 'fold_1_fn_errs', 'fold_1_tp', 'fold_1_tn', 'fold_2_fp_errs', 'fold_2_fn_errs', 'fold_2_tp', 'fold_2_tn',]\n",
     "\n",
@@ -269,7 +269,7 @@
     "    row.append(err_2[2])\n",
     "    row.append(err_2[3])\n",
     "\n",
-    "    write_to_csv('1.genome_learning_output/linear.csv', header, row)"
+    "    write_to_csv('1_genome/2_learning_record/linear.csv', header, row)"
    ]
   }
  ],
