--- a/error_rate.ipynb
+++ b/error_rate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,6 +114,23 @@
    ],
    "source": [
     "show_error_rate(pd.read_csv('1_genome/2_learning_record/linear_SVM_both.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fold1.test: 61.04 \t fold2.test: 27.88 \t total_label_fold1: 752 \t total_label_fold2: 520 \t total_test_error_fold1: 293 \t total_test_error_fold2: 375\n"
+     ]
+    }
+   ],
+   "source": [
+    "show_error_rate(pd.read_csv('1_genome/2_learning_record/deep.csv'))"
    ]
   },
   {
