--- a/utility_functions.ipynb
+++ b/utility_functions.ipynb
@@ -509,58 +509,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# seqs   = gen_data_dict('sequence_label_data/genome/signals.gz')\n",
-    "# labels = gen_data_dict('sequence_label_data/genome/labels.gz')\n",
+    "def show_error_rate(df):\n",
+    "    fold1_total_errs = df['fold_1_fp_errs'].sum() + df['fold_1_fn_errs'].sum()\n",
+    "    fold2_total_errs = df['fold_2_fp_errs'].sum() + df['fold_2_fn_errs'].sum()\n",
     "\n",
-    "# # test\n",
-    "# seq_id = 5\n",
-    "# lda = 10**(0.5)\n",
+    "    fold1_total_labels = df['fold_1_total_labels'].sum()\n",
+    "    fold2_total_labels = df['fold_2_total_labels'].sum()\n",
     "\n",
-    "# sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(seq_id, seqs, labels)\n",
-    "# chpnt = opart(lda=lda, sequence=sequence)\n",
-    "# err1 = error_count(chpnt, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
-    "# err2 = error_count(chpnt, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
+    "    rate1 = 100*(fold1_total_labels - fold1_total_errs)/fold1_total_labels\n",
+    "    rate2 = 100*(fold2_total_labels - fold2_total_errs)/fold2_total_labels\n",
     "\n",
-    "# print(\"sequence:    \", sequence[0:5])\n",
-    "# print(\"neg start 1: \", neg_start_1)\n",
-    "# print(\"neg end 1    \", neg_end_1)\n",
-    "# print(\"pos start 1: \", pos_start_1)\n",
-    "# print(\"pos end 1:   \", pos_end_1)\n",
-    "# print(\"neg start 2: \", neg_start_2)\n",
-    "# print(\"neg end 2    \", neg_end_2)\n",
-    "# print(\"pos start 2: \", pos_start_2)\n",
-    "# print(\"pos end 2:   \", pos_end_2)\n",
-    "# print(\"chpnt:\", chpnt)\n",
-    "# print(\"err1:\", err1)\n",
-    "# print(\"err2:\", err2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n"
-     ]
-    }
-   ],
-   "source": [
-    "# seqs   = gen_data_dict('sequence_label_data/genome/signals.gz')\n",
+    "    # print(\"fold1.test: %5.2f \\t fold2.test: %5.2f \\t total_label_fold1: %3d \\t total_label_fold2: %3d \\t total_test_error_fold1: %3d \\t total_test_error_fold2: %3d\" \n",
+    "    #       % (rate1, rate2, fold1_total_labels, fold2_total_labels, fold1_total_errs, fold2_total_errs))\n",
     "\n",
-    "# c = 0\n",
-    "# for i in range(len(seqs)):\n",
-    "#     if(len(seqs[i][1]) > 30000):\n",
-    "#         c += 1\n",
-    "\n",
-    "# print(c)"
+    "    return rate1, rate2, fold1_total_labels, fold2_total_labels, fold1_total_errs, fold2_total_errs"
    ]
   }
  ],
