update MSE for linear

--- a/utility_functions.ipynb
+++ b/utility_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,6 +527,39 @@
     "    #       % (rate1, rate2, fold1_total_labels, fold2_total_labels, fold1_total_errs, fold2_total_errs))\n",
     "\n",
     "    return rate1, rate2, fold1_total_labels, fold2_total_labels, fold1_total_errs, fold2_total_errs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def plot_section(low_target, high_target, feature, section_color='blue', low_color='blue', high_color='green'):\n",
+    "    plt.scatter([low_target], [feature], color=low_color, s=50, label='Low Target')\n",
+    "    plt.scatter([high_target], [feature], color=high_color, s=50, label='High Target')\n",
+    "    plt.plot([low_target, high_target], [feature, feature], color=section_color, linestyle='-', linewidth=0.5, label='Section')\n",
+    "\n",
+    "\n",
+    "def plot_feature_targets(feature, low_target, high_target, predicted_target, feature_name):\n",
+    "\n",
+    "    # Plotting each section\n",
+    "    for i in range(len(low_target)):\n",
+    "        plot_section(low_target[i], high_target[i], feature[i])\n",
+    "\n",
+    "    # plot predicted target\n",
+    "    if(predicted_target is not None):\n",
+    "        plt.plot(predicted_target, feature, color='red', marker='o')\n",
+    "\n",
+    "    # Adding labels and title\n",
+    "    plt.xlabel('Log(Lambda)')\n",
+    "    plt.ylabel('Feature')\n",
+    "    plt.title(f'Feature: {feature_name}')\n",
+    "\n",
+    "    # Show the plot\n",
+    "    plt.show()"
    ]
   }
  ],
