--- a/0.Try_Everything/test_pelt.ipynb
+++ b/0.Try_Everything/test_pelt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "seqs   = gen_data_dict('sequence_label_data/genome/signals.gz')\n",
-    "labels = gen_data_dict('sequence_label_data/genome/labels.gz')"
+    "seqs   = gen_data_dict('C:/Users/tln229/Downloads/ML_ChangepointDetection/1_genome/0_sequences_labels/signals.gz')\n",
+    "labels = gen_data_dict('C:/Users/tln229/Downloads/ML_ChangepointDetection/1_genome/0_sequences_labels/labels.gz')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
