--- a/0.Try_Everything/utility_functions.ipynb
+++ b/0.Try_Everything/utility_functions.ipynb
@@ -591,19 +591,19 @@
     }
    ],
    "source": [
-    "seqs   = gen_data_dict('../1_genome/0_sequences_labels/signals.gz')\n",
-    "labels = gen_data_dict('../1_genome/0_sequences_labels/labels.gz')\n",
+    "# seqs   = gen_data_dict('../1_genome/0_sequences_labels/signals.gz')\n",
+    "# labels = gen_data_dict('../1_genome/0_sequences_labels/labels.gz')\n",
     "\n",
-    "i = 7\n",
-    "print(seqs[i][0])\n",
+    "# i = 7\n",
+    "# print(seqs[i][0])\n",
     "\n",
-    "sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(i, seqs, labels)\n",
-    "lda = np.exp(-3.25)\n",
-    "chpnt = opart(lda, sequence)\n",
-    "print(lda)\n",
-    "print(list(chpnt))\n",
-    "print(plot_sequence(sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, algorithm='OPART', chpnt=chpnt, lda=np.round(lda, 2)))\n",
-    "print(plot_sequence(sequence, neg_start_2, neg_end_2, pos_start_2, pos_end_2, algorithm='OPART', chpnt=chpnt, lda=np.round(lda, 2)))"
+    "# sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(i, seqs, labels)\n",
+    "# lda = np.exp(-3.25)\n",
+    "# chpnt = opart(lda, sequence)\n",
+    "# print(lda)\n",
+    "# print(list(chpnt))\n",
+    "# print(plot_sequence(sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, algorithm='OPART', chpnt=chpnt, lda=np.round(lda, 2)))\n",
+    "# print(plot_sequence(sequence, neg_start_2, neg_end_2, pos_start_2, pos_end_2, algorithm='OPART', chpnt=chpnt, lda=np.round(lda, 2)))"
    ]
   }
  ],
