update rnn handle

--- a/0.Try_Everything/utility_functions.ipynb
+++ b/0.Try_Everything/utility_functions.ipynb
@@ -531,6 +531,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def plot_section(low_target, high_target, feature, section_color='blue', low_color='blue', high_color='green'):\n",
+    "    plt.scatter([low_target], [feature], color=low_color, s=50, label='Low Target')\n",
+    "    plt.scatter([high_target], [feature], color=high_color, s=50, label='High Target')\n",
+    "    plt.plot([low_target, high_target], [feature, feature], color=section_color, linestyle='-', linewidth=0.5, label='Section')\n",
+    "\n",
+    "\n",
+    "def plot_feature_targets(feature, low_target, high_target, predicted_target, feature_name):\n",
+    "\n",
+    "    # Plotting each section\n",
+    "    for i in range(len(low_target)):\n",
+    "        plot_section(low_target[i], high_target[i], feature[i])\n",
+    "\n",
+    "    # plot predicted target\n",
+    "    if(predicted_target is not None):\n",
+    "        plt.plot(predicted_target, feature, color='red', marker='o')\n",
+    "\n",
+    "    # Adding labels and title\n",
+    "    plt.xlabel('Log(Lambda)')\n",
+    "    plt.ylabel('Feature')\n",
+    "    plt.title(f'Feature: {feature_name}')\n",
+    "\n",
+    "    # Show the plot\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [
