--- a/0.Try_Everything/code_test.ipynb
+++ b/0.Try_Everything/code_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,6 +40,32 @@
     "    print(\"GPU is available\")\n",
     "else:\n",
     "    print(\"GPU is not available\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU speed: 2.5666250000000006 MHz\n"
+     ]
+    }
+   ],
+   "source": [
+    "import psutil\n",
+    "\n",
+    "# Get CPU frequency\n",
+    "cpu_speed = psutil.cpu_freq()\n",
+    "\n",
+    "# Print CPU speed\n",
+    "if cpu_speed is not None:\n",
+    "    print(\"CPU speed:\", cpu_speed.current, \"MHz\")\n",
+    "else:\n",
+    "    print(\"Unable to retrieve CPU speed.\")"
    ]
   }
  ],
