--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -11,6 +11,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
+    "import torch.nn.init as init\n",
     "from utility_functions import SquaredHingeLoss, get_acc, add_row_to_csv"
    ]
   },
@@ -81,17 +82,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the MLP model\n",
     "class MLPModel(nn.Module):\n",
     "    def __init__(self, input_size, hidden_layers, hidden_size):\n",
     "        super(MLPModel, self).__init__()\n",
-    "        self.input_size    = input_size\n",
+    "        self.input_size = input_size\n",
     "        self.hidden_layers = hidden_layers\n",
-    "        self.hidden_size   = hidden_size\n",
+    "        self.hidden_size = hidden_size\n",
     "        \n",
     "        self.input_layer = nn.Linear(input_size, hidden_size)\n",
     "        self.hidden = nn.ModuleList([nn.Linear(hidden_size, hidden_size) for _ in range(hidden_layers - 1)])\n",
     "        self.output_layer = nn.Linear(hidden_size, 1)\n",
+    "        \n",
+    "        self.initialize_parameters()\n",
+    "\n",
+    "    def initialize_parameters(self):\n",
+    "        for param in self.parameters():\n",
+    "            init.normal_(param, mean=0, std=2)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = torch.relu(self.input_layer(x))\n",
@@ -153,7 +159,7 @@
     "    cv_df_fold_features = cv_df_fold_features.sort_values(by='val_acc', ascending=False)\n",
     "    best_n_layer = cv_df_fold_features.iloc[0]['n_layer']\n",
     "    best_layer_size = cv_df_fold_features.iloc[0]['layer_size']\n",
-    "    return best_n_layer, best_layer_size"
+    "    return int(best_n_layer), int(best_layer_size)"
    ]
   },
   {
@@ -164,8 +170,8 @@
    "source": [
     "# main\n",
     "for test_fold in range(1, n_fold+1):\n",
-    "    for chosen_features, feature_engineer in zip([['length'], ['length', 'sd'], ['length', 'sd', 'range_value', 'sum_diff'], ['length'], ['length', 'sd'],     ['length', 'sd', 'range_value', 'sum_diff']],\n",
-    "                                                 [[loglog],   [log, log],       [log, log, log, log],                        [identity], [identity, identity], [identity, identity, identity, identity]]):\n",
+    "    for chosen_features, feature_engineer in zip([['length'], ['length', 'sd'], ['length', 'sd', 'range_value', 'sum_diff']],\n",
+    "                                                 [[loglog],   [loglog, log],       [loglog, log, log, log]]):\n",
     "        if(identity in feature_engineer):\n",
     "            is_engineer = 'no'\n",
     "        else:\n",
