--- a/figures/0.get_plot_acc.ipynb
+++ b/figures/0.get_plot_acc.ipynb
@@ -34,7 +34,7 @@
     "acc_compare_df = avg_df[avg_df['feature engineer']=='yes'].copy()\n",
     "acc_compare_df['lower_bound'] = acc_compare_df['avg_acc'] - acc_compare_df['std']\n",
     "acc_compare_df['upper_bound'] = acc_compare_df['avg_acc'] + acc_compare_df['std']\n",
-    "acc_compare_df['method'] = pd.Categorical(acc_compare_df['method'], categories=['BIC.1', 'linear.1', 'mlp.1', 'linear.2', 'mlp.2', 'linear.4', 'linear.117', 'mlp.4'], ordered=True)"
+    "acc_compare_df['method'] = pd.Categorical(acc_compare_df['method'], categories=['BIC.1', 'linear.1', 'linear.2', 'linear.4', 'linear.117', 'mlp.1', 'mlp.2', 'mlp.4'], ordered=True)"
    ]
   },
   {
